# Hugo_AI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest_result.txt  setup.sh
alembic/: env.py
alembic/versions/: 20260629_01_learning_baseline.py  20260629_05_operations_expansion.py  20260630_07_hermes_tasks.py
backend/argo/: config.py  demo.py  main.py  messaging.py  providers.py  services.py  setup.py
backend/hugo/: __init__.py  config.py  db.py  demo.py  domain.py  main.py  messaging.py  models.py  providers.py  schemas.py  security.py  services.py  setup.py  worker.py
backend/tests/: conftest.py  test_campaign_flow.py  test_demo.py  test_domain.py  test_hermes_tasks.py  test_learning.py  test_measured_payouts.py  test_operator_api.py  test_payments_policy.py  test_setup.py
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: action-queue.tsx  app-shell.tsx  campaign-form.tsx  campaign-list.tsx  campaign-workspace.tsx  learning.tsx  overview.tsx  system.tsx
frontend/lib/: api.ts  types.ts
hermes-plugin/hugo-ops/: __init__.py  plugin.yaml  tools.py
hermes-skills/argo-creator-discovery/: SKILL.md
hermes-skills/argo-cron-orchestration/: SKILL.md
hermes-skills/argo-outreach-negotiation/: SKILL.md
hermes-skills/argo-performance-learning/: SKILL.md
hermes-skills/argo-platform-intelligence/: SKILL.md
hermes-skills/hugo-outreach/: SKILL.md
nemo/: README.md  hugo-backend-policy.yaml
scripts/: dev.sh
(+20 files in other folders)
