[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hugo-ai-backend"
version = "0.1.0"
description = "Hackathon backend for an autonomous, self-improving creator marketing agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "pydantic-settings>=2.4,<3",
  "psycopg[binary]>=3.2,<4",
  "httpx>=0.27,<0.28",
  "anyio>=4.4,<4.10",
  "stripe>=11,<14",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/hugo"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
